--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
-Hello World!
+<!DOCTYPE html>
+<html lang="zh-cmn-Hans">
+<head>
+	<title>h5</title>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+	<meta http-equiv="Cache-Control" content="no-siteapp">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no,maximum-scale=1.0"/>
+	<meta name="apple-mobile-web-app-status-bar-style" content="black" />
+	<meta name="apple-mobile-web-app-capable" content="yes" />
+	<meta name='apple-touch-fullscreen' content='yes'>
+	<meta name="full-screen" content="yes">
+	<meta name="format-detection" content="telephone=no, address=no"/>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<script type="text/javascript" src="js/TouchSlide.1.1.js"></script>
+	<script type="text/javascript" src="js/jquery-1.8.0.min.js"></script>
+</head>
+<body>
+	<div class="index" id="index">
+	</div>
+
+	<script type="text/javascript" src="js/function.js"></script>
+</body>
+</html>
