--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
 	<meta name='apple-touch-fullscreen' content='yes'>
 	<meta name="full-screen" content="yes">
 	<meta name="format-detection" content="telephone=no, address=no"/>
-	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<script type="text/javascript" src="js/TouchSlide.1.1.js"></script>
-	<script type="text/javascript" src="js/jquery-1.8.0.min.js"></script>
+	<link rel="stylesheet/less" type="text/css" href="css/style.less">
+	<script type="text/javascript" src="js/less.js"></script>
+	<script type="text/javascript" src="js/vue.min.js"></script>
 </head>
 <body>
 	<div class="index" id="index">
+		
 	</div>
 
 	<script type="text/javascript" src="js/function.js"></script>
