--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
 	<div class="index" id="index">
-		Hello World!
+		这是第一个github.io
 	</div>
 
 	<script type="text/javascript" src="js/function.js"></script>
