--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <body>
 	<div class="index" id="index">
 		这是第一个github.io
+		做了一些微小的工作
 	</div>
 
 	<script type="text/javascript" src="js/function.js"></script>
