--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <body>
 	<div class="index" id="index">
 		这是第一个github.io
+		master分支上的修改
 	</div>
 
 	<script type="text/javascript" src="js/function.js"></script>
