--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
 </head>
 <body>
 	<div class="index" id="index">
-		这是第一个github.io
-		冲突编辑成功
+		<p>{text}</p>
 	</div>
 
 	<script type="text/javascript" src="js/function.js"></script>
