--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
 	<div class="index" id="index">
-		<p>{text}</p>
+		<p>{{text}}</p>
 	</div>
 
 	<script type="text/javascript" src="js/function.js"></script>
