--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <body>
 	<div class="index" id="index">
 		<p>{{text}}</p>
+		<p>temp2</p>
 	</div>
 
 	<script type="text/javascript" src="js/function.js"></script>
