change to echart

--- a/index.html
+++ b/index.html
@@ -14,12 +14,14 @@
 	<link rel="stylesheet/less" type="text/css" href="css/style.less">
 	<script type="text/javascript" src="js/less.js"></script>
 	<script type="text/javascript" src="js/vue.min.js"></script>
+	<script type="text/javascript" src="js/echarts.common.min.js"></script>
 </head>
 <body>
-	<div class="index" id="index">
+<!-- 	<div class="index" id="index">
 		<p>{{text}}</p>
 		<p>temp</p>
-	</div>
+	</div> -->
+	<div class="chart" id="chart" style=""></div>
 
 	<script type="text/javascript" src="js/function.js"></script>
 </body>
