--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<p>{{text}}</p>
 		<p>temp</p>
 	</div> -->
-	<div class="chart" id="chart" style=""></div>
+	<div class="chart" id="chart" style="width: 100%; height: 200px;"></div>
 
 	<script type="text/javascript" src="js/function.js"></script>
 </body>
