--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-cmn-Hans">
 <head>
-	<title>h5</title>
+	<title>No Fxxk</title>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 	<meta http-equiv="Cache-Control" content="no-siteapp">
@@ -17,11 +17,11 @@
 	<script type="text/javascript" src="js/echarts.common.min.js"></script>
 </head>
 <body>
-<!-- 	<div class="index" id="index">
-		<p>{{text}}</p>
-		<p>temp</p>
-	</div> -->
-	<div class="chart" id="chart" style="margin: 20% 0; width: 100%; height: 200px;"></div>
+	<div id="index">
+		<h1>从2018-04-10日起至今<br>不和谐记录 <span>{{len}}</span> 条<br>罚金池共 <span>{{len * price}}</span> 元</h1>
+	</div>
+	<div class="chart" id="lineChart"></div>
+	<div class="chart" id="barChart"></div>
 
 	<script type="text/javascript" src="js/function.js"></script>
 </body>
