修改周年白金input type

--- a/ed/index.html
+++ b/ed/index.html
@@ -51,7 +51,7 @@
       </div>
       <div class="item">
         <p>周年白金套装乘数</p>
-        <input type="tel" id="platinum" placeholder="请输入周年白金套装乘数" maxlength="10" oninput="setLS(this)" value="1" />
+        <input type="number" id="platinum" placeholder="请输入周年白金套装乘数" maxlength="10" oninput="setLS(this)" value="1" />
       </div>
       <button class="btn" onclick="result(edData)">看看结果</button>
     </div>
