为神器升级提供建议

--- a/optimizer/index.html
+++ b/optimizer/index.html
@@ -323,7 +323,7 @@
         <h2 class="h5">神器列表 <small class="d-inline-block ml-2"><small class="text-uppercase"><span
                 id="owned_count">90</span>of
               <span id="total_count">90</span>已拥有</small></small></h2>
-        <p>这块暂时没有翻译，神器的升级建议还是按照旧的版本来升级，这个确实不那么便捷。如果是我理解有问题，欢迎联系我指正。</p>
+        <p>个人使用建议：选择 <string class="text-warning">1%</string> 为单位，从上到下，按照建议列表升级神器，数值差不多就行，不用特别精细。这样升级可以节省大量的时间，而且太精细的升级不见得会带来更好的提升。</p>
         <p><small><em>以下是建议</em></small></p>
         <div id="artifact_reccs_wrapper" class="dataTables_wrapper no-footer">
           <div id="artifact_reccs_wrapper" class="dataTables_wrapper no-footer">
