--- a/optimizer/index.html
+++ b/optimizer/index.html
@@ -41,11 +41,8 @@
           <textarea id="dataTextarea" placeholder="数据格式被严格限制，格式有误将导入失败"></textarea>
           <button class="btn btn-success" id="importData">导入数据</button>
         </p>
-        <p>本网站以表格的形式提供神器与技能树优化方案并由 mmlh
-          维护。由于使用与游戏同样的算法，玩家将得到与游戏内同样的结果。该网站是为了给玩家提供一个更简单易用的无脑优化器，但是如果你想要作出细微的控制或调整，建议不要使用该优化器。如果发现 bug请加入 discord
-          服务器并报告给我。
-          中文翻译由薄荷的猫爬架--Hugo提供，如果有翻译问题，请加QQ群--343443757 反馈。
-        </p>
+        <p>导入导出功能是为了将本工具输入的数据导出并保存在其他地方(云笔记等)，方便在其他端使用本工具时直接导入之前保存的数据。</p>
+        <p>中文翻译由薄荷的猫爬架--Hugo提供，如果有翻译问题，请加QQ群--343443757 反馈。</p>
         <p>如果有技术问题请联系QQ -- 277148066</p>
         <p><a class="sc" target="_blank" href="https://tt2-optimizer.herokuapp.com/">英文原版地址</a></p>
         <p>初次访问时，将玩家流派和统计数据填入下面的选项框。之后只需要在数据发生改变时才更新他们（比如说新的圣物总量，总技能点，主要输出英雄变更等等）。我已经试着将较容易改变的数据放在顶端。只要你不删除浏览器的
@@ -332,16 +329,6 @@
               role="grid" style="width: 100%;"></table>
           </div>
         </div>
-        <p class="mt-3">Based on your answers in the Options tab, this is the best distribution of your relics across
-          the non-maxable artifacts. It is presumed that you will max out any artifact that can be, which is why they
-          are not included in this view. It doesn't need to be 100% precise, but this is the general shape that is most
-          effective. At higher artifact levels, I find 1% to be the best way to get as close as possible to these
-          numbers.</p>
-        <p><small>NOTE: Recently switch builds or switch to this method of optimizing? Don't worry if they don't
-            exactly match for several prestiges. Over time it will smooth out and get on track. In the meantime just
-            get them as close as you can! I recommend that after you get BoS to the right level, you alternate each
-            prestige from starting at the top or bottom of the list. It's the fastest way to get back on track while
-            maintaining good balance.</small></p>
       </div>
       <div class="tab-pane fade" id="skills" role="tabpanel" aria-labelledby="skills-tab">
         <p class="mt-3">个性化生成技能树</p>
