--- a/optimizer/index.html
+++ b/optimizer/index.html
@@ -424,8 +424,7 @@
             </div>
           </div>
         </div>
-        <p class="mt-3" id="sp_next"><small><em>The next best skill to unlock is Dimensional Shift (78 SP)</em></small>
-        </p>
+        <p class="mt-3" id="sp_next"></p>
       </div>
     </div>
   </div>
@@ -438,7 +437,7 @@
   <script src="./js/dataTables.responsive.min.js"></script>
   <!-- Custom JS -->
   <script src="./js/data.js?v=1.0.1"></script>
-  <script src="./js/app.js?v=1.0.1"></script>
+  <script src="./js/app.js?v=1.0.2"></script>
 
 
 </body>
