--- a/optimizer/index.html
+++ b/optimizer/index.html
@@ -31,10 +31,14 @@
             aria-controls="skills" aria-selected="false">技能加点</a>
         </li>
       </ul>
-      <h1 class="h4">TT2 优化器 <span class="badge badge-secondary">3.2.1</span></h1>
+      <h1 class="h4">
+        TT2 优化器 <span class="badge badge-secondary">3.2.2</span>
+      </h1>
     </div>
     <div class="tab-content" id="tabContent">
       <div class="tab-pane fade active show" id="options" role="tabpanel" aria-labelledby="options-tab">
+        <p></p>
+        <strong class="text-warning">* 已增加附魔神器 *</strong>
         <p></p>
         <p>
           <button class="btn btn-primary" id="exportData">导出数据</button>
