--- a/optimizer/index.html
+++ b/optimizer/index.html
@@ -11,7 +11,7 @@
   <link href="./css/bootstrap.min.css" rel="stylesheet">
   <link href="./css/jquery.dataTables.min.css" rel="stylesheet">
   <link href="./css/responsive.dataTables.min.css" rel="stylesheet">
-  <link href="./css/app.css" rel="stylesheet">
+  <link href="./css/app.css?v=20190820" rel="stylesheet">
 </head>
 
 <body class="bg-dark text-light">
@@ -446,8 +446,8 @@
   <script src="./js/jquery.dataTables.min.js"></script>
   <script src="./js/dataTables.responsive.min.js"></script>
   <!-- Custom JS -->
-  <script src="./js/data.js?v=1.0.3"></script>
-  <script src="./js/app.js?v=1.0.4"></script>
+  <script src="./js/data.js?v=20190820"></script>
+  <script src="./js/app.js?v=20190820"></script>
 
 
 </body>
