修改优化器红薯以及总圣物单位上限

--- a/optimizer/index.html
+++ b/optimizer/index.html
@@ -125,6 +125,16 @@
                     <option value="e28">e28</option>
                     <option value="e29">e29</option>
                     <option value="e30">e30/af</option>
+                    <option value="e31">e31</option>
+                    <option value="e32">e32</option>
+                    <option value="e33">e33/ag</option>
+                    <option value="e34">e34</option>
+                    <option value="e35">e35</option>
+                    <option value="e36">e36/ah</option>
+                    <option value="e37">e37</option>
+                    <option value="e38">e38</option>
+                    <option value="e39">e39</option>
+                    <option value="e40">e40</option>
                   </select>
                 </div>
               </div>
@@ -447,7 +457,7 @@
   <script src="./js/dataTables.responsive.min.js"></script>
   <!-- Custom JS -->
   <script src="./js/data.js?v=20190820"></script>
-  <script src="./js/app.js?v=20190828"></script>
+  <script src="./js/app.js?v=20190906"></script>
 
 
 </body>
