进一步扩大总圣物数量级

--- a/optimizer/index.html
+++ b/optimizer/index.html
@@ -102,40 +102,7 @@
                 <input type="number" id="bospct" class="form-control" placeholder="#.##" aria-label="relics value"
                   onchange="storeValues();" step="0.01" value="50.00">
                 <div class="input-group-append">
-                  <select class="form-control" id="bosunit" onchange="storeValues();">
-                    <option value="pct">%</option>
-                    <option value="e0">(&lt; 1000)</option>
-                    <option value="e3">K</option>
-                    <option value="e6">M</option>
-                    <option value="e9">B</option>
-                    <option value="e12">T</option>
-                    <option value="e15">e15/aa</option>
-                    <option value="e16">e16</option>
-                    <option value="e17">e17</option>
-                    <option value="e18">e18/ab</option>
-                    <option value="e19">e19</option>
-                    <option value="e20">e20</option>
-                    <option value="e21">e21/ac</option>
-                    <option value="e22">e22</option>
-                    <option value="e23">e23</option>
-                    <option value="e24">e24/ad</option>
-                    <option value="e25">e25</option>
-                    <option value="e26">e26</option>
-                    <option value="e27">e27/ae</option>
-                    <option value="e28">e28</option>
-                    <option value="e29">e29</option>
-                    <option value="e30">e30/af</option>
-                    <option value="e31">e31</option>
-                    <option value="e32">e32</option>
-                    <option value="e33">e33/ag</option>
-                    <option value="e34">e34</option>
-                    <option value="e35">e35</option>
-                    <option value="e36">e36/ah</option>
-                    <option value="e37">e37</option>
-                    <option value="e38">e38</option>
-                    <option value="e39">e39</option>
-                    <option value="e40">e40</option>
-                  </select>
+                  <select class="form-control" id="bosunit" onchange="storeValues();"></select>
                 </div>
               </div>
               <p class="mb-0"><em><small>(如果你想红书保持在固定百分比，请选择%，不然的话选择一个单位并输入你想要的红书等级，没全神器前，不建议超过50%)</small></em>
